Change nav styling from positioning to flexbox to prevent overlap

--- a/covrt/src/components/Calculator.css
+++ b/covrt/src/components/Calculator.css
@@ -52,6 +52,10 @@
     margin-top: 2rem;
     margin-left: 1.5rem;
     margin-right: 1.5rem;
+
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
 
 .calc-step-title {
@@ -102,10 +106,8 @@
 }
 
 .prev-next-btns {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
     margin-bottom: 1rem;
+    margin-top: auto;
 }
 
 .btn-text {
@@ -214,10 +216,15 @@
 }
 
 .calc-nav-controls {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    flex: 1;
+}
+
+.calc-main-container {
+    display: flex;
+    flex-direction: column;
 }
 
 @media (min-width: 768px) {
@@ -236,13 +243,8 @@
         border-color: #ACB0BC;
         border-radius: 20px;
         position: relative;
-    }
 
-    .calc-nav-controls {
-        margin-bottom: 3rem;
-        position: absolute;
-        width: 100%;
-        bottom: 0;
-        left: 0;
+        display: flex;
+        flex-direction: column;
     }
 }
